--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,15 +1,37 @@
+<div class="background"></div>
+
 <div class="container">
-    <h2>Login</h2>
-    <form (ngSubmit)="login()">
-      <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" id="email" [(ngModel)]="email" name="email" required class="form-control">
+  <body>
+    <h2>Sign In</h2>
+    <form [formGroup]="loginForm" (ngSubmit)="login()">
+      <div *ngIf="successMessage" class="success-message">
+        {{ successMessage }}
       </div>
-      <div class="form-group">
-        <label for="password">Password:</label>
-        <input type="password" id="password" [(ngModel)]="password" name="password" required class="form-control">
+      <div *ngIf="errorMessage" class="error-message">
+        {{ errorMessage }}
       </div>
-      <button type="submit" class="btn btn-primary">Login</button>
+      <div class="form-group" [ngClass]="{'has-error': email!.invalid && (email!.dirty || email!.touched)}">
+        <input type="email" id="email" formControlName="email" class="form-control" placeholder="Email">
+        <div *ngIf="email!.invalid && (email!.dirty || email!.touched)" class="error-message">
+          <span class="error-icon">❌</span>
+          <div *ngIf="email!.errors?.['required']">Please enter your email.</div>
+          <div *ngIf="email!.errors?.['email']">Please enter a valid email.</div>
+        </div>
+      </div>
+      <div class="form-group" [ngClass]="{'has-error': password!.invalid && (password!.dirty || password!.touched)}">
+        <input type="password" id="password" formControlName="password" class="form-control" placeholder="Password">
+        <div *ngIf="password!.invalid && (password!.dirty || password!.touched)" class="error-message">
+          <span class="error-icon">❌</span>
+          <div *ngIf="password!.errors?.['required']">Please enter your password.</div>
+          <div *ngIf="password!.errors?.['minlength']">Your password must contain at least 4 characters.</div>
+          <div *ngIf="password!.errors?.['maxlength']">Your password must contain no more than 60 characters.</div>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Sign In</button>
     </form>
-  </div>
-  
+    <a id="forgot-password">Forgot password?</a>
+    <p id="new-to-netflix">
+      New to Videoflix? <a id="sign-up" [routerLink]="['/register']">Sign up now.</a>
+    </p>
+  </body>
+</div>
