--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,5 +1,7 @@
-<div class="container">
+<div class="back">
+  <div class="container">
     <div class="left">
-        <h2>VideofliX</h2>
+      <h2>VideofliX</h2>
     </div>
+  </div>
 </div>
