--- a/src/app/components/video-player/video-player.component.scss
+++ b/src/app/components/video-player/video-player.component.scss
@@ -1,4 +1,34 @@
-.video-js {
+.video-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+
+  .resolution-select {
+    position: absolute;
+    top: 10px;  // Adjust as needed
+    right: 10px;  // Adjust as needed
+    z-index: 10;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: rgb(255, 255, 255);
+    font-size: 14px;
+    color: #333;
+    cursor: pointer;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-image: url('data:image/svg+xml;utf8,<svg fill="none" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5H7z" fill="%23333"/></svg>');
+    background-repeat: no-repeat;
+    background-position: right 1px center;
+    background-size: 12px;
+  }
+
+  .video-js {
     width: 100%;
     height: 100%;
   }
+}
