--- a/src/app/components/shared/navbar/navbar.component.scss
+++ b/src/app/components/shared/navbar/navbar.component.scss
@@ -1,32 +1,50 @@
 @import "../../../../styles.scss";
 
-.back{
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    background-color: black;
+.back {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  background-color: black;
 }
-.container{
-    font-family: "DM-bold";
-    width: 100%;
-    max-width: 1440px;
 
-    height: 10vh;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    background-color: black;
+.container {
+  font-family: "DM-bold";
+  width: 100%;
+  max-width: 1440px;
+  height: 10vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: black;
 
-    >.left{
-        margin-left: 40px;
-        >h2{
-            font-size: $fnt-size-M;
-            font-family: "DM-regular";
-            color: $primary-red;
-            margin: 0;
-        }
+  .left {
+    margin-left: 40px;
+
+    h2 {
+      font-size: $fnt-size-M;
+      font-family: "DM-regular";
+      color: $primary-red;
+      margin: 0;
     }
-  
+  }
+
+  .right {
+    margin-left: auto;
+    margin-right: 40px;
+
+    button {
+      background-color: $primary-red;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      font-family: "DM-regular";
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+
+      &:hover {
+        background-color: darken($primary-red, 10%);
+      }
+    }
+  }
 }
-
-
