imprint & privacy policy

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,3 +50,13 @@ $primary-red: #e50914;
   font-weight: normal;
   font-style: normal;
 }
+
+footer {
+  background-color: #141414;
+  color: white;
+  text-align: center;
+  padding: 20px 0;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+}
