--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="back">
   <div class="container">
     <div class="left">
-      <h2>VideofliX</h2>
+      <h2 (click)="goBack()">VideofliX</h2>
     </div>
     <div class="right">
       <button *ngIf="showLogoutButton" (click)="logout()">Logout</button>
