--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,10 @@
 <div class="banner">
   <div class="banner-content">
     <h1>Welcome to VideoFlix</h1>
-    <p>Explore the newest movies on the market, watch series, movies, animes, and more. Start exploring & enjoying unlimited entertainment!</p>
+    <p>
+      Explore the newest movies on the market, watch series, movies, animes, and
+      more. Start exploring & enjoying unlimited entertainment!
+    </p>
   </div>
 </div>
 
@@ -11,14 +14,26 @@
 
 <ng-template #movieList>
   <div class="movie-grid">
-    <div class="movie-card" *ngFor="let movie of movies">
+    <div
+      class="movie-card"
+      *ngFor="let movie of movies"
+      (click)="navigateToMovie(movie.id)"
+    >
       <div class="movie-banner">
-        <img [src]="getThumbnailUrl(movie.thumbnail_file)" alt="{{ movie.title }}">
+        <img
+          [src]="getThumbnailUrl(movie.thumbnail_file)"
+          alt="{{ movie.title }}"
+        />
       </div>
       <div class="movie-info">
         <h2>{{ movie.title }}</h2>
         <p>{{ truncateDescription(movie.description) }}</p>
-        <a [routerLink]="['/movie', movie.id]" class="details-link">Details</a>
+        <a
+          [routerLink]="['/movie', movie.id]"
+          class="details-link"
+          (click)="$event.stopPropagation()"
+          >Details</a
+        >
       </div>
     </div>
   </div>
