--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -13,7 +13,7 @@
 
 .banner {
   width: 100%;
-  background: url('../../../assets/img/banner.jpg') no-repeat center center;
+  background: url("../../../assets/img/banner.jpg") no-repeat center center;
   background-size: cover;
   padding: 50px 20px;
   text-align: center;
@@ -56,6 +56,7 @@
   border-radius: 10px;
   overflow: hidden;
   width: 250px;
+  height: 360px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -63,10 +64,11 @@
   padding: 10px;
   margin-bottom: 20px;
   box-sizing: border-box;
+  cursor: pointer;
 
   .movie-banner img {
     width: 100%;
-    height: auto;
+    height: 150px;
     border-bottom: 2px solid #333;
   }
 
