--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,34 +21,30 @@ $primary-red: #e50914;
 
 @font-face {
   font-family: "DM-bold";
-  src: url("/src/assets/fonts/DMSans-Bold.ttf") format("woff2"),
-    url("/src/assets/fonts/DMSans-Bold.ttf") format("woff");
-  font-weight: normal;
+  src: url("assets/fonts/DMSans-Bold.ttf") format("truetype");
+  font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: "DM-regular";
-  src: url("/src/assets/fonts/DMSans-Regular.ttf") format("woff2"),
-    url("/src/assets/fonts/DMSans-Regular.ttf") format("woff");
+  src: url("assets/fonts/DMSans-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "DM-medium";
-  src: url("/src/assets/fonts/DMSans-Medium.ttf") format("woff2"),
-    url("/src/assets/fonts/DMSans-Medium.ttf") format("woff");
+  src: url("assets/fonts/DMSans-Medium.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "DM-italic";
-  src: url("/src/assets/fonts/DMSans-Italic.ttf") format("woff2"),
-    url("/src/assets/fonts/DMSans-Italic.ttf") format("woff");
+  src: url("assets/fonts/DMSans-Italic.ttf") format("truetype");
   font-weight: normal;
-  font-style: normal;
+  font-style: italic;
 }
 
 footer {
